--- a/assignments/assignment_Orrico_class2.ipynb
+++ b/assignments/assignment_Orrico_class2.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
     "# Remove all other columns.\n",
     "# Your submitted dataframe will have these columns: 'height', 'max', 'number', 'length', 'ratio', 'cat2_CA-0', 'cat2_CA-1',...\n",
     "\n",
-    "df.to_csv(index=False,path_or_buf='.\\TfTest.csv')"
+    "df.to_csv(index=False,path_or_buf='.\\class2_output.csv')"
    ]
   },
   {
