--- a/assignments/assignment_Orrico_class4.ipynb
+++ b/assignments/assignment_Orrico_class4.ipynb
@@ -55,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: not using Google CoLab\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from google.colab import drive\n",
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_submit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m----------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-8c4e4c667e7d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0msubmit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf_submit\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mno\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_submit' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -162,24 +182,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google.colab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m----------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-b72d2ec7c76d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEarlyStopping\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mActivation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google.colab'"
+     ]
+    }
+   ],
    "source": [
-    "# Below is just a suggestion.  These are the imports that I used.\n",
-    "from scipy.stats import zscore\n",
+    "import pandas as pd\n",
+    "import io\n",
+    "import requests\n",
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Activation\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from google.colab import drive\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Activation\n",
     "\n",
-    "def fill_missing_numeric(df,current,target):\n",
+    "def createDummyCols( colName, df, x1 ):\n",
+    "    dummies = pd.get_dummies(df[colName],prefix=colName)\n",
+    "    x1 = pd.concat([x1,dummies],axis=1)\n",
+    "    return x1\n",
+    "    # x1.drop(colName, axis=1, inplace=True)\n",
+    "\n",
+    "def fill_missing_numeric(df1,current,target):\n",
+    "\n",
+    "    df1.to_csv(index=False,path_or_buf='class4_input.csv')\n",
+    "    !cp class4_input.csv \"drive/My Drive/\"\n",
+    "\n",
     "    # Fill in as needed\n",
+    "    df = df1.dropna()\n",
     "    \n",
-    "    return None\n",
+    "    TFmat = df1[[current]].isna()\n",
+    "    print( TFmat )\n",
     "\n",
+    "    dfcols = df.columns.values.tolist()\n",
+    "    # dfcols.remove(current)\n",
+    "    dfcols.remove(target)\n",
+    "    x1 = df[['s3', 'a8', 'a11', 'a15']]\n",
+    "\n",
+    "    x1 = createDummyCols('a9', df, x1)\n",
+    "    x1 = createDummyCols('a10', df, x1)\n",
+    "    x1 = createDummyCols('a12', df, x1)\n",
+    "    x1 = createDummyCols('a13', df, x1)\n",
+    "    print(x1.columns.values)\n",
+    "\n",
+    "    x = x1.values\n",
+    "    y = df[ [current] ].values\n",
+    "    print(x1)\n",
+    "\n",
+    "    # Split into validation and training sets\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(    \n",
+    "    x, y, test_size=0.05, random_state=42)\n",
+    "\n",
+    "    # Build the neural network\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(200, input_dim=x.shape[1], activation='relu')) # Hidden 1\n",
+    "    model.add(Dense(100, activation='relu')) # Hidden 2\n",
+    "    model.add(Dense(40, activation='relu')) # Hidden 3\n",
+    "    model.add(Dense(1)) # Output\n",
+    "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "\n",
+    "    monitor = EarlyStopping(monitor='val_loss', min_delta=1e-3, patience=50, verbose=1, mode='auto',\n",
+    "            restore_best_weights=True)\n",
+    "    model.fit(x_train,y_train,validation_data=(x_test,y_test),callbacks=[monitor],verbose=2,epochs=500)\n",
+    "\n",
+    "\n",
+    "    # Measure RMSE error.  RMSE is common for regression.\n",
+    "    pred = model.predict(x_test)\n",
+    "    score = np.sqrt(metrics.mean_squared_error(pred,y_test))\n",
+    "    print(f\"Final score (RMSE): {score}\")\n",
+    "\n",
+    "    # Fill in the missing values from the first dataframe\n",
+    "    x2 = df1[['s3', 'a8', 'a11', 'a15']]\n",
+    "    x2 = createDummyCols('a9', df1, x2)\n",
+    "    x2 = createDummyCols('a10', df1, x2)\n",
+    "    x2 = createDummyCols('a12', df1, x2)\n",
+    "    x2 = createDummyCols('a13', df1, x2)\n",
+    "    pred = model.predict(x2)\n",
+    "    yb = df1[[current]]\n",
+    "    yb = yb.fillna(0)\n",
+    "    out =  ( pred * TFmat ) + yb\n",
+    "    df1[[current]] = yb\n",
+    "    \n",
+    "    return df1\n",
+    "\n",
+    "# Begin assignment\n",
+    "df = pd.read_csv(\"https://data.heatonresearch.com/data/t81-558/crx.csv\",na_values=['?'])\n",
     "df_submit = fill_missing_numeric(df,'a2','a16')\n",
-    "df_submit = fill_missing_numeric(df,'a14','a16')"
+    "df_submit = fill_missing_numeric(df_submit,'a14','a16')\n",
+    "df_submit.to_csv(index=False,path_or_buf='class4output.csv')\n",
+    "!cp class4output.csv \"drive/My Drive/\""
    ]
   },
   {
@@ -204,9 +310,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.6 (tensorflow)",
+   "display_name": "Python 3.7 (tensorflow)",
    "language": "python",
-   "name": "rga"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
